# minimax_queueing_experiments

./: .gitignore  CODEX.md  README.md  REPOSITORY_OPERATIONS.md  experiment_spec_codex_draft.md  pyproject.toml
configs/: amq_debug.yaml  amq_eval50_debug.yaml  amq_smoke.yaml  bvi_debug.yaml  bvi_eval50_debug.yaml  bvi_sensitivity.yaml  nnq_debug.yaml  nnq_eval50_debug.yaml  nnq_forced_low_debug.yaml  nnq_forced_medium_debug.yaml  nnq_long_debug.yaml  nnq_low_lr_debug.yaml  nnq_low_state_repair_debug.yaml  nnq_smoke.yaml  nnq_state0_guard_debug.yaml  nnq_state0_guard_eval50_debug.yaml  nnq_state0_guard_smoke.yaml  nnq_state_scale1_debug.yaml  nnq_uniform_explore_debug.yaml  polling_amq_action_interaction_100_smoke.yaml  polling_amq_action_interaction_300_smoke.yaml  polling_amq_action_interaction_500_smoke.yaml  polling_amq_basic_1000_smoke.yaml  polling_amq_basic_200_smoke.yaml  polling_amq_basic_300_smoke.yaml  polling_amq_basic_500_smoke.yaml  polling_amq_basic_low_lr_1000_smoke.yaml  polling_amq_calibrated_smoke.yaml  polling_amq_smoke.yaml  polling_augmented_comparison_smoke.yaml  polling_calibrated_comparison_smoke.yaml  polling_comparison_smoke.yaml  polling_nnq_3000_smoke.yaml  polling_nnq_augmented_3000_smoke.yaml  polling_nnq_calibrated_smoke.yaml  polling_nnq_smoke.yaml  polling_smoke.yaml  routing_amq_debug.yaml  routing_amq_multiseed_debug.yaml  routing_amq_multiseed_smoke.yaml  (+24 more)
docs/: current_handoff_20260429.md  polling_minimal_closure.md  polling_policy_calibration.md  pr_draft_20260429.md  routing_amq_calibration_handoff.md  routing_amq_debug.md  (+7 more)
(+69 files in other folders)
